--- a/signUp.html
+++ b/signUp.html
@@ -7,8 +7,11 @@
         <title>Sign Up</title>
 </head>
 <body>
+    <div class ="council">
+        <h1>The Small Council</h1>
+    </div>
     <header class = "body">
-        <h1 id= "signUp">Sign Up</h1>
+        <h2 id= "signUp">Sign Up</h2>
     </header>
     <section class = "body">
         <form action = "">
@@ -24,7 +27,7 @@
         </form>
     </section>
     <footer class = "body">
-        <p>Team Progject</p>
+        <p id = "bottomText">The Small Counsel</p>
     </footer>
 </body>
 </html>
