--- a/login_form.html
+++ b/login_form.html
@@ -1,4 +1,16 @@
-<link type="text/css" rel="stylesheet" href="styles.css" />
+<!DOCTYPE html>
+
+<link type="text/css" rel="stylesheet" href="loginstyles.css" />
+<head>
+
+        <meta charset="UTF-8">
+        <meta name="Author" content="ChatClient">
+        <title>CS344 Project</title> 
+
+</head>
+<h1>Please enter login information</h1>
+<br>
+
 <form class="login_form" method="post" action="main.php">
  <div>Username: <input type="text" name="username" /></div>
  <div>Password: <input type="password" name="password" /></div>
