--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="section">
         <form method="POST" action="room/index.php">
             <select id="room-select" name="roomid" size="3" multiple>
-                <option value="East">East Room</option>
+                <option selected value="East">East Room</option>
                 <option value="North">North Room</option>
                 <option value="South">South Room</option>
             </select>
