--- a/login_form.html
+++ b/login_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<link type="text/css" rel="stylesheet" href="loginstyles.css" />
+<link type="text/css" rel="stylesheet" href="signUp.css" />
 <head>
 
         <meta charset="UTF-8">
